--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "flow-bin": "^0.100.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-scripts": "3.0.1"
@@ -12,6 +13,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
+        "flow": "flow",
         "format": "prettier --trailing-comma es5 --single-quote --write 'src/**/*.js'",
         "format-markdown": "prettier --parser=markdown --write 'src/**/*.md'"
     },
