--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "flow-bin": "^0.100.0",
         "react": "^16.8.6",
+        "react-color": "^2.17.3",
         "react-dom": "^16.8.6",
         "react-scripts": "3.0.1"
     },
@@ -21,7 +22,11 @@
         "extends": "react-app"
     },
     "browserslist": {
-        "production": [">0.2%", "not dead", "not op_mini all"],
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
         "development": [
             "last 1 chrome version",
             "last 1 firefox version",
