--- a/.flowconfig
+++ b/.flowconfig
@@ -7,5 +7,9 @@
 [lints]
 
 [options]
+; A magical comment that suppresses any Flow errors on the following line
+; https://flowtype.org/docs/advanced-configuration.html
+suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
+suppress_comment= \\(.\\|\n\\)*\\$FlowIgnore
 
 [strict]
